# Bitcoin-Price-Prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: Data Sources Documentation.md  Deployment & Infrastructure.md  Development Environment Setup.md  Implementation Plan & Roadmap.md  Project Structure & Organization.md  System Design Decisions.md  Technology Stack.md  Testing Strategy & Quality Assurance.md
docs/implementation/: Phase_1_Data_Collection.md  Phase_2_Data_Processing.md  Phase_3_ML_Training.md
monitoring/: prometheus.yml
scripts/: setup_dev.py  start_dev.sh
scripts/development/: create_tables.py  debug_coindesk_extraction.py  test_setup.py
scripts/development/phase_1_data_collection/: test_news_collection.py  test_price_collection.py
scripts/development/phase_2_data_processing/: process_sentiment.py  sentiment_summary.py  test_complete_features.py  test_ml_datasets.py  test_price_features.py  test_sentiment_analysis.py  validate_data_quality.py
scripts/development/phase_3_ml_training/: deploy_models.py  test_advanced_models.py  test_api.py  test_baseline_models.py  test_production_system.py
src/api/: __init__.py  main.py  models.py  prediction_service.py
src/data_engineering/collectors/: base_collector.py  news_collector.py  price_collector.py  social_collector.py
src/data_engineering/processors/: news_processor.py  price_processor.py  social_processor.py
src/ml_models/: __init__.py  base_model.py  training_pipeline.py
src/monitoring/: __init__.py  api_metrics.py  model_monitor.py
src/shared/: config.py  database.py  logging.py  models.py
tests/: conftest.py  factories.py
tests/integration/: test_external_apis.py
tests/unit/: __init__.py  test_collectors.py  test_processors.py  test_sentiment.py  test_validators.py
(+23 files in other folders)
