[tool.poetry]
name = "bitcoin-prediction-engine"
version = "0.1.0"
description = "Real-time Bitcoin price prediction with sentiment analysis"
authors = ["Ahmed Ismail Khalid <ahmedik95316@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.6"
# Core dependencies for Phase 1
fastapi = "^0.104.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.1.0"
psycopg2-binary = "^2.9.0"
praw = "^7.7.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"